--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<i class="fa fa-mail-reply" style="font-size:20px;color:black"></i> <i class="fa fa-address-card" style="font-size:20px;color:black"></i>  Ke Beranda</span>
 	</a></div>
 	<p>
-  <img src="/doku/spmb1.JPG"    alt="smpb1"/>
+  <img src="/doku/smpb1.JPG"    alt="smpb1"/>
   </div>
 <div class="col-md-6 mt-2 mb-2">
 	<p>
@@ -69,7 +69,7 @@
 	<i class="fa fa-mail-reply" style="font-size:20px;color:black"></i> <i class="fa fa-address-card" style="font-size:20px;color:black"></i>  Ke Beranda</span>
 	</a></div>
 	<p>
-  <img src="/doku/spmb4.JPG"    alt="smpb1"/>
+  <img src="/doku/spbm4.JPG"    alt="smpb1"/>
   </div>
   <div class="col-md-6 mt-2 mb-2">
 	<p>
